--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="pages">
-            <p>TESTING</p>
+        <div class="page">
             <header class="header"></header>
             <main class="content">
                 <section class="recipes"></section>
