--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                     />
                     <ul class="nav__links">
                         <li><a href="" class="nav__link">Recipes</a></li>
-                        <li><a href="" class="nav__link">Book a table</a></li>
+                        <li><a href="" class="nav__link">Reservation</a></li>
                         <li><a href="" class="nav__link">Menu</a></li>
                         <li><a href="" class="nav__link">Contacts</a></li>
                     </ul>
                 </nav>
                 <h1 class="header__title">
-                    <img src="./images/inside_coffee_shop.png" alt="inside coffeeshop" class="image"/>
+                    <img src="./images/inside_coffee_shop.png" alt="inside coffeeshop" class="header__image"/>
                     <span class="header__span-accent">Specialty Coffee</span>in the Triple Peaks Library</h1>
                 <p class="header__description">Welcome to our study zone! We've got the coffee to energize you and the cozy vibes to help you get creative.
                 </p>
@@ -49,25 +49,25 @@
                 </div>
             </header>
             <main class="content">
-                <section class="recipes">
+                <section class="Recipes">
                     <h2 class="recipes__title">Recipes</h2>
                     <p class="recipes__subtitle">
                         Check out some recipes we've collected for your home-brewing convenience:
                     </p>
                     <div class="recipes__videos">
                         <div>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=kazVWIpGZKKHxtD-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=kazVWIpGZKKHxtD-" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <p class="recipes__video-caption">Aeropress recipe ~5 min</p>
                         </div>
                         <div>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=P2P670clk98CkS1p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=P2P670clk98CkS1p" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <p class="recipes__video-caption">French press recipes ~15 min</p>
                         </div>
                     </div>
                 </section>
-                <section class="reservation"></section>
-                <section class="menu"></section>
-                <section class="about"></section>
+                <section class="Reservation"></section>
+                <section class="Menu"></section>
+                <section class="Contacts"></section>
             </main>
             <footer class="footer"></footer>
         </div>
