--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                     </p>
                     <div class="recipes__videos">
                         <div>
-                            <recipes__iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=kazVWIpGZKKHxtD-" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <recipes__iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=kazVWIpGZKKHxtD-" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></recipes__iframe>
                         <p class="recipes__video-caption">Aeropress recipe ~5 min</p>
                         </div>
                         <div>
-                            <recipes__iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=P2P670clk98CkS1p" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <recipes__iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=P2P670clk98CkS1p" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></recipes__iframe>
                         <p class="recipes__video-caption">French press recipes ~15 min</p>
                         </div>
                     </div>
