--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <img src="./images/logo_coffeeshop_dark.svg" alt="Coffeshop Logo" class="nav__logo"
                     />
                     <ul class="nav__links">
-                        <li><a href="" class="nav__link">Recipes</a></li>
-                        <li><a href="" class="nav__link">Reservation</a></li>
-                        <li><a href="" class="nav__link">Menu</a></li>
-                        <li><a href="" class="nav__link">Contacts</a></li>
+                        <li><a href="#recipes" class="nav__link">Recipes</a></li>
+                        <li><a href="#reservation" class="nav__link">Reservation</a></li>
+                        <li><a href="#menu" class="nav__link">Menu</a></li>
+                        <li><a href="contacts" class="nav__link">Contacts</a></li>
                     </ul>
                 </nav>
                 <h1 class="header__title">
@@ -56,13 +56,13 @@
                     </p>
                     <div class="recipes__videos">
                         <div>
-                            <recipes__iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=kazVWIpGZKKHxtD-" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></recipes__iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=kazVWIpGZKKHxtD-" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <p class="recipes__video-caption">Aeropress recipe ~5 min</p>
                         </div>
                         <div>
-                            <recipes__iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=P2P670clk98CkS1p" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></recipes__iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=P2P670clk98CkS1p" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <p class="recipes__video-caption">French press recipes ~15 min</p>
-                        </div>
+                    </div>
                     </div>
                 </section>
                 <section class="Reservation"></section>
