--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li><a href="#recipes" class="nav__link">Recipes</a></li>
                         <li><a href="#reservation" class="nav__link">Reservation</a></li>
                         <li><a href="#menu" class="nav__link">Menu</a></li>
-                        <li><a href="contacts" class="nav__link">Contacts</a></li>
+                        <li><a href="#contacts" class="nav__link">Contacts</a></li>
                     </ul>
                 </nav>
                 <h1 class="header__title">
@@ -49,7 +49,7 @@
                 </div>
             </header>
             <main class="content">
-                <section class="recipes">
+                <section id="recipes" class="recipes">
                     <h2 class="recipes__title">Recipes</h2>
                     <p class="recipes__subtitle">
                         Check out some recipes we've collected for your home-brewing convenience:
