--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                     </div>
                     </div>
                 </section>
-                <section id="reservation" class="Reservation">
+                <section id="reservation" class="reservation">
                     <h2 class="reservation__title">Book a Table</h2>
-                    <form class="reversation__form">
+                    <form class="reversation__form form">
                         <fieldset class="form__fieldset"
                         <label for="name-input" class="form__label">
                             Name *
-                            <input required id="name-input" type="text" class="form__input" placeholder="Name Surname">
+                            <input required id="name-input" name="name-input" type="text" class="form__input" placeholder="Name Surname">
                         </label>
                         <label for="guestnumber-input" class="form__label">
                             Name of Guests *
