--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <section id="reservation" class="reservation">
                     <h2 class="reservation__title">Book a Table</h2>
                     <form class="reversation__form form">
-                        <fieldset class="form__fieldset"
+                        <fieldset class="form__fieldset">
                         <label for="name-input" class="form__label">
                             Name *
                             <input required id="name-input" name="name-input" type="text" class="form__input" placeholder="Name Surname">
