--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                         </label>
                     </fieldset>
                     <button class="form__button">Book a Table</button>
-                    <label for="" class="form__label form__label_type_checkbox">
-                        <input required type="checkbox" class="form__checkbox" />
+                    <label for="checkbox" class="form__label form__label_type_checkbox">
+                        <input required id="checkbox" type="checkbox" class="form__checkbox" />
                         I agree with the terms of use.
                     </label>
                     </form>
