--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </section>
                 <section id="reservation" class="reservation">
                     <h2 class="reservation__title">Book a Table</h2>
-                    <form class="form reversation__form">
+                    <form class="form-reversation__form">
                         <fieldset class="form__fieldset">
                         <label for="name-input" class="form__label">
                             Name *
