--- a/index.html
+++ b/index.html
@@ -8,17 +8,12 @@
         <meta name="author" content="Software Engineer" />
         <meta name="keywords" content="HTML, CSS" />
         <link rel="stylesheet" href="pages/index.css" />
-        <link rel="stylesheet" href="vendor/normalize.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="stylesheet" href="blocks/about.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="http://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"
         />
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <title>Coffee Shop</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="page">
@@ -57,11 +52,11 @@
                     </p>
                     <div class="recipes__videos">
                         <div>
-                            <iframe class="recipes__iframe" width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=kazVWIpGZKKHxtD-" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe class="recipes__iframe" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=kazVWIpGZKKHxtD-" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <p class="recipes__video-caption">Aeropress recipe ~5 min</p>
                         </div>
                         <div>
-                            <iframe class="recipes__iframe" width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=P2P670clk98CkS1p" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe class="recipes__iframe" src="https://www.youtube.com/embed/st571DYYTR8?si=P2P670clk98CkS1p" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <p class="recipes__video-caption">French press recipes ~15 min</p>
                     </div>
                     </div>
@@ -141,7 +136,7 @@
                    <div class="about__circle about__circle_animation_blurred"></div>
                 </section>
             </main>
-            <footer id="contacts" class="footer">
+            <footer class="footer">
                <div class="footer__content">
                 <img src="./images/logo_coffeeshop_light.svg" alt="triple espresso logo" class="footer__logo">
                 <div>
